--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
         </div></main>
         <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-             <ul class="text-center" aria-label="Barra de redes sociales" style= "display: flex; justify-content: space-around; align-items: center; padding-top: 40px; margin: 0; padding-left: 15px; padding-right: 15px;"><li
+             <ul class="text-center" aria-label="Barra de redes sociales" style= "display: flex; justify-content: space-around; align-items: center; padding-top: 40px; margin: 0;"><li
                 id="dataItem-k9uyee84-comp-ih0eog7j" class="text-center">
                 <a data-testid="linkElement" href="https://www.instagram.com/circular.pet" target="_blank" class="_26AQd">
                     <wix-image id="img_0_comp-ih0eog7j" class="_1-6YJ uWpzU" data-image-info="{&quot;containerId&quot;:&quot;dataItem-k9uyee84-comp-ih0eog7j&quot;,&quot;displayMode&quot;:&quot;fill&quot;,&quot;imageData&quot;:{&quot;width&quot;:200,&quot;height&quot;:200,&quot;uri&quot;:&quot;40898a93cfff4578b1779073137eb1b4.png&quot;,&quot;displayMode&quot;:&quot;fill&quot;}}" data-has-bg-scroll-effect="" data-bg-effect-name="" data-image-zoomed="" data-has-ssr-src="" data-src="https://static.wixstatic.com/media/40898a93cfff4578b1779073137eb1b4.png/v1/fill/w_136,h_136,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/40898a93cfff4578b1779073137eb1b4.png">
@@ -192,25 +192,29 @@
         </ul>
         </div>
         <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-             <ul class="text-center" aria-label="Barra de redes sociales"><li
-                id="dataItem-k9uyee84-comp-ih0eog7j" class="text-center">
+             <ul class="text-center" aria-label="Barra de redes sociales" style="display: flex; justify-content: space-around; align-items: center; padding-top: 40px; padding-left: 0; margin: 0;">
+              <li id="dataItem-k9uyee84-comp-ih0eog7j" class="text-center">
                 <a data-testid="linkElement" href="https://api.whatsapp.com/send?text=https://circularpet.github.io/cuidatuperro/" target="_blank" class="_26AQd">
                     <wix-image id="img_0_comp-ih0eog7j" class="_1-6YJ uWpzU" data-image-info="{&quot;containerId&quot;:&quot;dataItem-k9uyee84-comp-ih0eog7j&quot;,&quot;displayMode&quot;:&quot;fill&quot;,&quot;imageData&quot;:{&quot;width&quot;:200,&quot;height&quot;:200,&quot;uri&quot;:&quot;40898a93cfff4578b1779073137eb1b4.png&quot;,&quot;displayMode&quot;:&quot;fill&quot;}}" data-has-bg-scroll-effect="" data-bg-effect-name="" data-image-zoomed="" data-has-ssr-src="" data-src="https://static.wixstatic.com/media/40898a93cfff4578b1779073137eb1b4.png/v1/fill/w_136,h_136,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/40898a93cfff4578b1779073137eb1b4.png">
-                        <img src="https://cdn.discordapp.com/attachments/816505802361143306/974126734888824862/compartir.png" alt="compartir" style="max-width: 50%; max-height: 50%; width:68px;height:68px;object-fit:cover;object-position:50% 50%">
+                        <img src="https://cdn.discordapp.com/attachments/816505802361143306/974126734888824862/compartir.png" alt="compartir" style="width:65%;height:100%;object-fit:cover;">
                     </wix-image>
                 </a>
             </li>
+        </ul>
+        </div>
+        <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
+             <ul class="text-center" aria-label="Barra de redes sociales" style="display: flex; justify-content: space-around; align-items: center; padding-top: 40px; padding-left: 0; margin: 0;">
             <li id="dataItem-klvkualj-comp-ih0eog7j" class="text-center">
                 <a data-testid="linkElement" href="https://www.circular.pet/comprar" target="_blank" class="_26AQd">
                     <wix-image id="img_1_comp-ih0eog7j" class="_1-6YJ uWpzU" data-image-info="{&quot;containerId&quot;:&quot;dataItem-klvkualj-comp-ih0eog7j&quot;,&quot;displayMode&quot;:&quot;fill&quot;,&quot;imageData&quot;:{&quot;width&quot;:200,&quot;height&quot;:200,&quot;uri&quot;:&quot;11062b_c7468ec61d494ead83af6058b76cadc0~mv2.png&quot;,&quot;displayMode&quot;:&quot;fill&quot;}}" data-has-bg-scroll-effect="" data-bg-effect-name="" data-image-zoomed="" data-has-ssr-src="" data-src="https://static.wixstatic.com/media/11062b_c7468ec61d494ead83af6058b76cadc0~mv2.png/v1/fill/w_136,h_136,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/11062b_c7468ec61d494ead83af6058b76cadc0~mv2.png">
-                        <img src="https://cdn.discordapp.com/attachments/816505802361143306/974126735207596083/comprar.png" alt="Tik Tok " style="width:68px;height:68px;object-fit:cover;object-position:50% 50%">
+                        <img src="https://cdn.discordapp.com/attachments/816505802361143306/974126735207596083/comprar.png" alt="Tik Tok " style="width:65%;height:100%;object-fit:cover;">
                     </wix-image>
                 </a>
             </li>
         </ul>
         </div>
  </div>
-   <div class="container text-white" style="display: flex; padding-top: 60px">
+   <div class="container text-white" style="display: flex; padding-top: 30px; justify-content: center; padding-left: 15px; padding-right: 15px;">
         <div class="row py-5">
           <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto small">
             <p class="text-center">
@@ -221,7 +225,7 @@
         </div>
       </div>
       <div class="container text-white">
-        <div class="row py-5">
+        <div class="row py-4">
           <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto small">
             <p class="text-center">
               <strong> Fuentes. </strong> <br>
