--- a/index.html
+++ b/index.html
@@ -97,9 +97,7 @@
                     <p class="p-1 text-light">
                        ¡Cuida a este perro en una semana para saber la huella de carbono de tus decisiones!</p>
                 </div>
-                     <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-                    <object data="img/lolo.svg" type="image/svg+xml" class="w-200"></object>
-                         </div>
+                <iframe src="V2.2/index.html" width="398" height="586" style="margin-top: 15px; margin-bottom: 15px; width:480px; height:320px;" frameborder="0" id="MyGame" title="This is my HTML5 masterpiece"></iframe>
                          <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                            <p class="p-1 text-light"></p>
         </div>
