--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 font-weight: 200;
             }
             header p {
-                text-align:;
+                text-align:center;
             }
             header p.lead {
                 line-height: 1.6;
@@ -98,7 +98,9 @@
                        ¡Cuida a este perro en una semana para saber la huella de carbono de tus decisiones!</p>
                 </div>
                 <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-                <iframe src="V2.2/index.html" width="398" height="586" style="margin-top: 15px; margin-bottom: 15px; width:398px; height:586px;" frameborder="0" id="MyGame" title="This is my HTML5 masterpiece"></iframe>
+                <p align="center">
+                <iframe src="V2.2/index.html" width="398" height="586" style="margin-top: 15px; margin-bottom: 15px; width:398px; height:586px;" frameborder="0" id="JuegoPerrito" title="JuegoPerrito"></iframe>
+                </p>
                 </div>
                          <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                            <p class="p-1 text-light"></p>
