--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </div>
                 <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                 <p align="center">
-                <iframe src="V2.2/index.html" width="398" height="586" style="margin-top: 0px; margin-bottom: 0px; width:398px; height:586px;" scrolling="no" frameborder="0" id="JuegoPerrito" title="JuegoPerrito"></iframe>
+                <iframe src="V2.2/index.html" style="margin-top: 0px; margin-bottom: 0px; width:100%" scrolling="no" frameborder="0" id="JuegoPerrito" title="JuegoPerrito"></iframe>
                 </p>
                 </div>
                          <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
