--- a/V2.2/index.html
+++ b/V2.2/index.html
@@ -73,13 +73,13 @@
     <body>
         <div class="gm4html5_div_class" id="gm4html5_div_id">
             <!-- Create the canvas element the game draws to -->
-            <canvas id="canvas" width="398" height="586">
+            <canvas id="canvas" width="300" height="445">
                <p>Your browser doesn't support HTML5 canvas.</p>
             </canvas>
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/JuegoPerrito_v2_1.js?JJRYB=1202776710"></script>
+        <script type="text/javascript" src="html5game/JuegoPerrito_v2_1.js?LRXXB=210409142"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
