--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <p class="p-1 text-light">
                        ¡Cuida a este perro en una semana para saber la huella de carbono de tus decisiones!</p>
                 </div>
-                <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
+                <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto" style="padding-left: 3px; padding-right: 4px;">
                 <p align="center">
                 <iframe width="300" height="445" src="V2.3/index.html" style="margin-top: 0px; margin-bottom: 0px; width: 300px;" scrolling="no" frameborder="0" id="JuegoPerrito" title="JuegoPerrito"></iframe>
                 </p>
